# linguaparser

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.server.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 67703b9ff35d_create_initial_tables.py  c56ccf7284b8_init.py
app/: main.py
app/api/: routes.py
app/core/: __init__.py  auth.py  config.py  database.py
app/models/: __init__.py  user.py  user_word.py  word.py
app/schemas/: __init__.py  learning.py  user_word.py  word.py
app/services/: learning.py  parser.py  translator.py  users.py
app/static/css/: style.css
app/static/html/: index.html  navbar.html  results.html  study.html  words.html
