[project]
name = "linguaparser"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",                                                                                                         
    "uvicorn",                                                                                                         
    "sqlalchemy",                                                                                                      
    "psycopg2-binary",
    "pydantic-settings",                                                                                               
    "python-multipart",
    "jinja2",                                                                                                          
    "requests", 
    "beautifulsoup4",
    "deep-translator",
    "httpx",                                                                                                           
    "python-jose[cryptography]",
    "alembic",                                                                                                         
    "gunicorn",
]
